# new_term

./: Cargo.toml
src/: main.rs  renderer.rs  text_render.rs
src/data/: quad.frag  quad.vert
src/renderer/: render_texture.rs
src/text_render/: process.rs
