[package]
name = "new_term"
version = "0.1.0"
authors = ["Nick Alexeev <nickalexeev@protonmail.com>"]
edition = "2018"
[features]
default = []
metal = ["gfx-backend-metal"]
dx12 = ["gfx-backend-dx12"]
vulkan = ["gfx-backend-vulkan"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
log = "0.4"
gfx-hal = "0.6.0"
winit = "0.22.2"
gfx-auxil = "0.6.0"
gfx-backend-empty = "0.6.0"
font-kit="0.10.0"
pathfinder_geometry = "0.5.1"
[dependencies.gfx-backend-vulkan]
version = "0.6.1"
optional = true


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.7"
glsl-to-spirv = "0.1.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.55"
console_error_panic_hook = "0.1.6"
console_log = "0.1.2"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.6"
features = [ "console", "Document", "Element", "HtmlElement", "Node", "Window" ]

[target.'cfg(target_os = "macos")'.dependencies.gfx-backend-metal]
version = "0.6.1"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
version = "0.6.1"
optional = true
